--- a/edgelet/contrib/debian/install
+++ b/edgelet/contrib/debian/install
@@ -1,5 +1,7 @@
 iotedge usr/bin
 iotedged usr/bin
 debian/iotedge.mgmt.socket lib/systemd/system
+debian/idservice.socket lib/systemd/system
+debian/keyservice.socket lib/systemd/system
 etc/iotedge/config.yaml.template
 etc/logrotate.d/iotedge
